--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,8 @@ services:
     build:
       context: "."
       args:
-        PHP_VERSION: "8.0"
+        PHP_VERSION: "${PHP_VERSION:-8.0}"
+    volumes:
+    - ".:/app"
+    user: "${UID:-1000}:${GID:-1000}"
+    working_dir: "/app"
