--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,7 @@
   "description": "Griffin is a Graph-Oriented Migration Framework for PHP",
   "type": "library",
   "license": "MIT",
-  "require": {}
+  "require": {
+    "php": ">=8.0"
+  }
 }
