--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
   "require": {
     "php": ">=8.0"
   },
+  "require-dev": {
+    "php-parallel-lint/php-parallel-lint": "1.3.*"
+  },
   "extra": {
     "branch-alias": {
       "dev-main": "1.0.x-dev"
