--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "php": ">=8.0"
   },
   "require-dev": {
-    "php-parallel-lint/php-parallel-lint": "1.3.*"
+    "php-parallel-lint/php-parallel-lint": "1.3.*",
+    "phpunit/phpunit": "9.5.4"
   },
   "extra": {
     "branch-alias": {
