--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpunit/phpunit": "9.5.4"
   },
+  "scripts": {
+    "test": [
+      "parallel-lint src tests",
+      "phpunit"
+    ]
+  },
   "extra": {
     "branch-alias": {
       "dev-main": "1.0.x-dev"
