--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   },
   "require-dev": {
     "php-parallel-lint/php-parallel-lint": "1.3.*",
+    "phpmd/phpmd": "2.9.*",
     "phpunit/phpunit": "9.5.4"
   },
   "autoload": {
@@ -26,7 +27,8 @@
   "scripts": {
     "test": [
       "parallel-lint src tests",
-      "phpunit"
+      "phpunit",
+      "phpmd src,tests text phpmd.xml"
     ]
   },
   "extra": {
