--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require-dev": {
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpmd/phpmd": "2.9.*",
-    "phpunit/phpunit": "9.5.4"
+    "phpunit/phpunit": "9.5.4",
+    "sebastian/phpcpd": "6.0.*"
   },
   "autoload": {
     "psr-4": {
@@ -28,6 +29,7 @@
     "test": [
       "parallel-lint src tests",
       "phpunit",
+      "phpcpd src tests",
       "phpmd src,tests text phpmd.xml"
     ]
   },
