--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpmd/phpmd": "2.9.*",
     "phpunit/phpunit": "9.5.4",
-    "sebastian/phpcpd": "6.0.*"
+    "sebastian/phpcpd": "6.0.*",
+    "slevomat/coding-standard": "7.0.*",
+    "squizlabs/php_codesniffer": "3.6.*"
   },
   "autoload": {
     "psr-4": {
@@ -30,7 +32,8 @@
       "parallel-lint src tests",
       "phpunit",
       "phpcpd src tests",
-      "phpmd src,tests text phpmd.xml"
+      "phpmd src,tests text phpmd.xml",
+      "phpcs"
     ]
   },
   "extra": {
