--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "sort-packages": true
   },
   "require": {
-    "php": ">=8.0"
+    "php": ">=8.0",
+    "league/event": "^3.0"
   },
   "require-dev": {
     "php-parallel-lint/php-parallel-lint": "1.3.*",
