--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpmd/phpmd": "2.9.*",
     "phpunit/phpunit": "9.5.4",
+    "psr/event-dispatcher": "^1.0",
     "sebastian/phpcpd": "6.0.*",
     "slevomat/coding-standard": "7.0.*",
     "squizlabs/php_codesniffer": "3.6.*"
