--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
   },
   "require": {
     "php": ">=8.0",
-    "league/event": "^3.0"
+    "psr/event-dispatcher": "^1.0"
   },
   "require-dev": {
+    "league/event": "^3.0",
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpmd/phpmd": "2.9.*",
     "phpunit/phpunit": "9.5.4",
-    "psr/event-dispatcher": "^1.0",
     "sebastian/phpcpd": "6.0.*",
     "slevomat/coding-standard": "7.0.*",
     "squizlabs/php_codesniffer": "3.6.*"
