--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   },
   "require": {
     "php": ">=8.0",
-    "psr/event-dispatcher": "^1.0"
+    "psr/event-dispatcher": "1.0.*"
   },
   "require-dev": {
     "league/event": "^3.0",
