--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "psr/event-dispatcher": "1.0.*"
   },
   "require-dev": {
-    "league/event": "^3.0",
+    "league/event": "3.0.*",
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpmd/phpmd": "2.9.*",
     "phpunit/phpunit": "9.5.4",
