--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,14 @@
   "description": "Griffin is a Graph-Oriented Migration Framework for PHP",
   "type": "library",
   "license": "MIT",
+  "keywords": [
+    "migration",
+    "migrations",
+    "database",
+    "graph",
+    "graph-theory",
+    "dependencies"
+  ],
   "config": {
     "sort-packages": true
   },
