--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
     "slevomat/coding-standard": "7.0.*",
     "squizlabs/php_codesniffer": "3.6.*"
   },
+  "suggest": {
+    "griffin/griffin-cli": "Command Line Interface for Griffin"
+  },
   "autoload": {
     "psr-4": {
       "Griffin\\": "src"
