--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "league/event": "3.0.*",
     "php-parallel-lint/php-parallel-lint": "1.3.*",
     "phpmd/phpmd": "2.9.*",
-    "phpunit/phpunit": "9.5.4",
+    "phpunit/phpunit": "9.5.*",
     "sebastian/phpcpd": "6.0.*",
     "slevomat/coding-standard": "7.0.*",
     "squizlabs/php_codesniffer": "3.6.*"
